--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -150,11 +150,11 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Agps">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef  style="place-content: center;"
                     >AGPS
                     </mat-header-cell
                     >
-                    <mat-cell *matCellDef="let report">{{
+                    <mat-cell *matCellDef="let report"  style="place-content: center;">{{
                         report.Agps
                         }}</mat-cell>
                 </ng-container>
