--- a/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
+++ b/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
@@ -155,7 +155,7 @@
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >Outstanding Loan
+                    >Loan Outstanding
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
