--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -25,8 +25,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/id-card.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class=" text-black">Search
-                        Loan Cases by CNIC</p>
+                    <p class=" text-black">Search Loan Cases by CNIC</p>
                 </div>
             </mat-card>
         </div>
@@ -39,7 +38,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
                 <p class=" text-black"
-               >Bifurcation of OS balances LC</p>
+               >Bifurcation of Outstanding Balances LC Wise</p>
             </div>
 
             </mat-card>
@@ -51,7 +50,7 @@
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
-                <p class=" text-black">Updated List of defaulters of a circle for each MCO</p>
+                <p class=" text-black">Updated List of Defaulters</p>
             </div>
             </mat-card>
         </div>
@@ -67,7 +66,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class=" text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs</p>
+                <p class=" text-black" >Circle/Party-Wise Early Warning Report</p>
             </div></mat-card>
         </div>
 
@@ -79,7 +78,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class=" text-black">Early warning reports for Due Installments</p>
+                    <p class=" text-black">Early Warning Report For MCO</p>
                 </div>
             </mat-card>
         </div>
@@ -93,7 +92,7 @@
 
 
                 <p class=" text-black"
-                >Loan amounts likely to be converted into default</p>
+                >Borrower About To be Defaulter</p>
             </div>
 
             </mat-card>
@@ -110,7 +109,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Voucher Posting Day-Booking Report</p>
+                    >Voucher Posting Day Book</p>
                 </div>
             </mat-card>
         </div>
@@ -123,7 +122,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Daily Voucher Proof Listing</p>
+                    >Daily Voucher Proofs List</p>
                 </div>
             </mat-card>
         </div>
@@ -136,7 +135,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Affidavit For Legal Heirs</p>
+                    >Affidavit For Legal Heirs Printing</p>
                 </div>
             </mat-card>
         </div>
@@ -153,7 +152,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Re-Payment Behavior</p>
+                    >Repayment Behaviour</p>
                 </div>
             </mat-card>
         </div>
@@ -180,7 +179,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Disbursement Performance (Purpose-Wise) Report</p>
+                    >Disbursement Performance Purpose Wise Report</p>
                 </div>
             </mat-card>
         </div>
@@ -209,7 +208,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Insurance Premimum Report</p>
+                    >Insurance Premimum Reports</p>
                 </div>
             </mat-card>
         </div>
@@ -220,7 +219,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >LA File Progress Summary</p>
+                    >Loan Application Progress Report</p>
                 </div></mat-card>
         </div>
 
@@ -235,7 +234,7 @@
 
 
                     <p class=" text-black"
-                    >Loan Information Details</p>
+                    >Loan Information Detail</p>
                 </div></mat-card>
         </div>
 
@@ -247,7 +246,7 @@
 
 
                     <p class=" text-black"
-                    >Unsuccessful Login</p>
+                    >Unsuccessful Login Attempts</p>
                 </div>
 
             </mat-card>
@@ -275,7 +274,7 @@
 
 
                     <p class=" text-black"
-                    >Markup On CA Report</p>
+                    >Markup on Central Account</p>
                 </div></mat-card>
         </div>
 
@@ -286,7 +285,7 @@
 
 
                     <p class=" text-black"
-                    >Recovery Schedule</p>
+                    >Recovery Installment</p>
                 </div></mat-card>
         </div>
 
@@ -312,7 +311,7 @@
 
 
                     <p class=" text-black"
-                    >Statement of Affairs Report</p>
+                    >Statement of Affairs</p>
                 </div></mat-card>
         </div>
 
