--- a/src/app/modules/notification/due-payments/due-payments.component.html
+++ b/src/app/modules/notification/due-payments/due-payments.component.html
@@ -128,7 +128,7 @@
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >Outstanding Loan
+                    >Loan Outstanding
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
