--- a/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
+++ b/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
@@ -127,7 +127,7 @@
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >Outstanding Loan
+                    >Loan Outstanding
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
