--- a/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
+++ b/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Affidavit for Legal Heirs</div>
+            <div class="heading">Affidavit For Legal Heirs Printing</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
