--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Bifurcation of OS balances LC</div>
+            <div class="heading">Bifurcation of Outstanding Balances LC Wise</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
