--- a/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
+++ b/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Daily Voucher Proof Listing</div>
+            <div class="heading">Daily Voucher Proofs List</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
