--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -11,7 +11,7 @@
 >
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Early Warning Reports</div>
+            <div class="heading">Early Warning Report For MCO</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
@@ -202,7 +202,7 @@
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >Outstanding Loan
+                    >Loan Outstanding
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
