--- a/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
+++ b/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
@@ -111,7 +111,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.PassbookNo
+                        report.MortageProperty
                         }}</mat-cell>
                 </ng-container>
 
