--- a/src/app/modules/reports/recovery-schedule/recovery-schedule.component.html
+++ b/src/app/modules/reports/recovery-schedule/recovery-schedule.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Recovery Schedule</div>
+            <div class="heading">Recovery Installment</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
