--- a/src/app/modules/reports/statement-of-affairs/statement-of-affairs.component.html
+++ b/src/app/modules/reports/statement-of-affairs/statement-of-affairs.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Statement of Affairs Report</div>
+            <div class="heading">Statement of Affairs</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
