--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -103,7 +103,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_cnic_expiry.png" class="img-responsive center-block w-12 mx-auto mb-3"
                          alt="icon"/>
-                    <p class=" text-black">Cnic Expiry of Loanee</p>
+                    <p class=" text-black">CNIC Expiry of Loanee</p>
                 </div>
             </mat-card>
         </div>
