--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="DBRForm"
-    class=" flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="heading">Calculate DBR</div>
+    class=" flex flex-col px-10 flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="heading mt-3">Calculate DBR</div>
     <!-- Header -->
 
     <!-- Main -->
