--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -11,7 +11,7 @@
 >
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Search Loan Cases By Cnic</div>
+            <div class="heading">Search Loan Cases By CNIC</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
