--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -117,6 +117,15 @@
                         }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="Circle">
+                    <mat-header-cell *matHeaderCellDef
+                    >Circle Code
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.CircleCode
+                        }}</mat-cell>
+                </ng-container>
 
                 <ng-container matColumnDef="Ndd">
                     <mat-header-cell *matHeaderCellDef
@@ -199,6 +208,13 @@
                         }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="markup">
+                    <mat-header-cell *matHeaderCellDef>Markup</mat-header-cell>
+                    <mat-cell *matCellDef="let report">{{
+                        report.Markup
+                        }}</mat-cell>
+                </ng-container>
+
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
@@ -207,6 +223,26 @@
                     >
                     <mat-cell *matCellDef="let report">{{
                         report.LoanOutStanding
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="sl">
+                    <mat-header-cell *matHeaderCellDef
+                    >Sanction Limit
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.SanctionLimit
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="tsa">
+                    <mat-header-cell *matHeaderCellDef
+                    >Total Sanction Amount
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.TotalSanctionAmount
                         }}</mat-cell>
                 </ng-container>
 
