--- a/src/app/modules/reports/gl-move/gl-move.component.html
+++ b/src/app/modules/reports/gl-move/gl-move.component.html
@@ -69,7 +69,7 @@
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <button class="bg-gray-500" mat-raised-button color="primary" (click)="find(false)"
+                                        <button class="bg-gray-500" mat-raised-button color="primary" (click)="findWithOut()"
                                                 type="button">
                                             <mat-icon class="mr-2">search</mat-icon>
                                             Find
@@ -113,7 +113,7 @@
                                 </div>
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                    <button class="bg-gray-500" mat-raised-button color="primary" (click)="find(true)"
+                                    <button class="bg-gray-500" mat-raised-button color="primary" (click)="findWith()"
                                             type="button">
                                         <mat-icon class="mr-2">search</mat-icon>
                                         Find
