--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -411,7 +411,7 @@ button:focus {
                 background-color: white;
                 height: 170px;
                 color: #01671B;
-                box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
                 border: 1px solid #22c55e !important;
                 p{
                     font-size: 12px;
