--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -66,7 +66,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class=" text-black" >Circle/Party-Wise Early Warning Report</p>
+                <p class=" text-black" >Circle/Party-Wise Early Warning Report (NPL & Charge Off)</p>
             </div></mat-card>
         </div>
 
