show in side menu fix

--- a/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
+++ b/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
@@ -81,7 +81,7 @@
                         <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile mb-3">
                             <mat-checkbox style="margin-top: 15px;" formControlName="IsActive"
                                           [checked]="this.data.activity.isActive"
-                            ><span>Should Show?</span>
+                            ><span>Should Show in Side Menu?</span>
                             </mat-checkbox>
                         </div>
 
