--- a/src/app/modules/reports/gl-move/gl-move.component.html
+++ b/src/app/modules/reports/gl-move/gl-move.component.html
@@ -36,7 +36,7 @@
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">From Date<strong
+                                            <mat-label class="customMatLabel">Working Date<strong
                                                 class="matMandatory">*</strong>
                                             </mat-label>
                                             <input matInput [matDatepicker]="picker" formControlName="WorkingDate"
@@ -82,7 +82,7 @@
                                     <div class="heading">GL Move Between Dates (GL Code is Required)</div>
                                 </div>
 
-                                <div class="flex" style="flex-wrap: wrap;">
+                                <div class="flex mt-2" style="flex-wrap: wrap;">
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
