--- a/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
+++ b/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
@@ -1,5 +1,4 @@
-<div
-    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
@@ -85,7 +84,7 @@
     </div>
 
 
-    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto  border shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;overflow-y: scroll">
         <div class="example-table-container">
             <!--[style.height]="gridHeight"-->
             <mat-table
@@ -164,8 +163,6 @@
             <div class="mat-table__message" *ngIf="loading">Please wait....</div> -->
 
         </div>
-
-
     </div>
     <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
                 <span class="font-bold text-green">Items per page:</span>
